--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.5.1",
     "redux-logger": "^3.0.6",
     "web-vitals": "^1.0.1"
   },
